add titles, sections and search bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Weather Forecast</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Weather Forecast</h1>
+    </header>
+    <div class="search-container">
+        <h3>Search for a city</h3>
+        <input type="text" id="search-bar">
+        <button id="searchBtn">Search</button>
+        <div id="search-history">
+            <ul id="history-list"></ul>
+        </div>
+    </div>
+    <main>
+        <h2>5 Day Forecast</h2>
+        <div id="forecast"></div>
+    </main>
 </body>
 </html>
