--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
     <header>
         <h1>Weather Forecast</h1>
     </header>
-    <div class="search-container">
-        <h3>Search for a city</h3>
-        <input type="text" id="search-bar">
-        <button id="searchBtn">Search</button>
-        <div id="search-history">
-            <ul id="history-list"></ul>
+    <div class="row">
+        <div id="search-container" class="container col-3">
+            <h3>Search for a city</h3>
+            <input type="text" id="search-bar">
+            <button id="searchBtn">Search</button>
+            <div id="search-history">
+                <ul id="history-list"></ul>
+            </div>
         </div>
+        <main class="container col-9">
+            <h2>5 Day Forecast</h2>
+            <div id="forecast"></div>
+        </main>
     </div>
-    <main>
-        <h2>5 Day Forecast</h2>
-        <div id="forecast"></div>
-    </main>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
