--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header>
         <h1>Weather Forecast</h1>
     </header>
-    <div class="row main-content">
+    <div class="row">
         <div id="search-container" class="container col-3">
             <h3>Search for a city</h3>
-            <input type="text" id="search-bar" class="row">
-            <button id="searchBtn" class="row">Search</button>
+            <input type="text" id="search-bar">
+            <button id="searchBtn">Search</button>
             <div id="search-history">
                 <ul id="history-list"></ul>
             </div>
