add temporary code for search history style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             <input type="text" id="search-bar" class="row">
             <button id="searchBtn" class="row">Search</button>
             <div id="search-history">
-                <ul id="history-list"></ul>
+                <ul id="history-list">
+                <li><button id="searchBtn">hey</button></li>
+                <li>hey</li>
+                </ul>
             </div>
         </div>
         <main class="container col-9">
