--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
             <h3>Search for a city</h3>
             <input type="text" id="search-bar" class="row">
             <button id="searchBtn" class="row">Search</button>
-            <div id="search-history">
-                <ul id="history-list">
-                <li><button id="searchBtn">hey</button></li>
-                <li>hey</li>
-                </ul>
+            <div id="search-history" class="hide">
+                <ul id="history-list"></ul>
             </div>
         </div>
         <main class="container col-9">
