created container for forecast output

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             </div>
         </div>
         <main class="container col-9">
-            <h2>5 Day Forecast</h2>
-            <div id="forecast"></div>
+            <div class="forecast-container">
+                <h2>5 Day Forecast</h2>
+                <div id="forecast"></div>
+            </div>
         </main>
     </div>
     
