entered placeholder text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row main-content">
         <div id="search-container" class="container col-3">
             <h3>Search for a city</h3>
-            <input type="text" id="search-bar" class="row">
+            <input type="text" id="search-bar" class="row" placeholder="Enter City">
             <button id="searchBtn" class="row">Search</button>
             <div id="search-history" class="hide">
                 <ul id="history-list"></ul>
