--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             </div>
         </div>
         <main class="container col-9">
+            <div class="current-weather">
+                <div id="current-forecast"></div>
+            </div>
             <div class="forecast-container">
                 <h2>5 Day Forecast</h2>
                 <div id="forecast"></div>
