styled five day cards

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="forecast-container">
                 <h2 class="5day">5 Day Forecast</h2>
-                <div id="forecast"></div>
+                <div class="d-flex flex-row" id="forecast"></div>
             </div>
         </main>
     </div>
