--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div id="current-forecast"></div>
             </div>
             <div class="forecast-container">
-                <h2 class="5day">5 Day Forecast</h2>
+                <h2 class="five-day">5 Day Forecast</h2>
                 <div class="d-flex flex-row" id="forecast"></div>
             </div>
         </main>
